Apply Services for project

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,6 +7,6 @@
 <br>
 <div class="row">
   <div class="col-md-6" *ngFor="let recipe of recipes" >
-    <app-recipe-item [recipe]="recipe" (recipeSelected)="onRecipeSelected($event)"></app-recipe-item>
+    <app-recipe-item [recipe]="recipe"></app-recipe-item>
   </div>
 </div>
