--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-3">
   <div class="col-md-12">
-    <img [src]="recipe?.imagePath" class="img-fluid" alt="" />
+    <img [src]="recipe?.imagePath" class="img-fluid" alt="recipe-img" />
   </div>
 </div>
 
@@ -21,7 +21,7 @@
         Manage Recipe <span class="carat"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#" class="dropdown-item">To Shopping List</a></li>
+        <li><a href="#" class="dropdown-item" (click)="addToShoppingList()">To Shopping List</a></li>
         <li><a href="#" class="dropdown-item">Edit Recipe</a></li>
         <li><a href="#" class="dropdown-item">Delete Recipe</a></li>
       </ul>
@@ -37,6 +37,14 @@
 
 <div class="row">
   <div class="col-md-12">
-    <h3>Ingredients</h3>
+    <ul class="list-group mt-2">
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredient of recipe?.ingredients"
+      >
+        {{ ingredient.name }} - ({{ ingredient.amount }})
+      </a>
+    </ul>
   </div>
 </div>
