--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,13 +1,17 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (recipeWasSelected)="selectedRecipe=$event"></app-recipe-list>
+    <app-recipe-list
+    ></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-details [recipe]="selectedRecipe" *ngIf="selectedRecipe; else noRecipe"></app-recipe-details>
+    <app-recipe-details
+      [recipe]="selectedRecipe"
+      *ngIf="selectedRecipe; else noRecipe"
+    ></app-recipe-details>
 
     <ng-template #noRecipe>
-      <br>
-      <p >Please Select Recipe !</p>
+      <br />
+      <p>Please Select Recipe !</p>
     </ng-template>
   </div>
 </div>
