Dealling with angular router in project

--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -21,9 +21,9 @@
         Manage Recipe <span class="carat"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#" class="dropdown-item" (click)="addToShoppingList()">To Shopping List</a></li>
-        <li><a href="#" class="dropdown-item">Edit Recipe</a></li>
-        <li><a href="#" class="dropdown-item">Delete Recipe</a></li>
+        <li><a class="dropdown-item" (click)="addToShoppingList()">To Shopping List</a></li>
+        <li><a class="dropdown-item" (click)="onEditRoute()">Edit Recipe</a></li>
+        <li><a class="dropdown-item">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
