--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,12 @@
 <br>
 <div class="row">
   <div class="col-md-12">
-    <button class="btn btn-primary">New Recipe</button>
+    <button class="btn btn-primary" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
 <br>
 <div class="row">
-  <div class="col-md-6" *ngFor="let recipe of recipes" >
-    <app-recipe-item [recipe]="recipe"></app-recipe-item>
+  <div class="col-md-6" *ngFor="let recipe of recipes; let i = index" >
+    <app-recipe-item [recipe]="recipe" [index]="i"></app-recipe-item>
   </div>
 </div>
