--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,10 +15,18 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-light active" aria-current="page" (click)="onSelect('recipe')">Recipe</a>
+          <a
+            class="nav-link text-light"
+            aria-current="page"
+            routerLink="/recipes"
+            routerLinkActive="active"
+            >Recipes</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" (click)="onSelect('shopping-list')">Shopping List</a>
+          <a class="nav-link text-light" routerLink="/shopping-list"
+            >Shopping List</a
+          >
         </li>
         <li class="nav-item text-light dropdown">
           <a
