--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,7 @@
-<div class="row">
-  <div class="mb-4" (click)="recipe ? onSelect(recipe) : ''">
+<div class="row"
+  [routerLink]="[index]"
+>
+  <div class="mb-4">
     <div class="card">
       <img [src]="recipe?.imagePath" alt="card-image" class="card-img-top" />
       <div class="card-body">
