--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,5 @@
-<div class="row">
+<div class="row mt-3">
   <div class="col-xs-12 col-md-6 offset-3">
-    <br />
     <div class="alert alert-danger" *ngIf="error">
       <p>
         {{ this.error }}
@@ -10,7 +9,6 @@
       <app-loader-spinner></app-loader-spinner>
     </div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
-      <br />
       <div class="form-group">
         <label for="email">Email</label>
         <input
@@ -24,8 +22,7 @@
         />
       </div>
 
-      <br />
-      <div class="form-group">
+      <div class="form-group mt-2">
         <label for="password">Password</label>
         <input
           type="password"
@@ -37,8 +34,7 @@
         />
       </div>
 
-      <br />
-      <div>
+      <div class="actions mt-2">
         <button
           class="btn btn-primary"
           type="submit"
