--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
-  <div class="container">
-    <a class="navbar-brand text-light" href="#">Recipe Website</a>
+  <div class="container-fluid">
+    <a class="navbar-brand text-light" routerLink="/recipes">Recipe Website</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -14,31 +14,26 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isAuthenicated">
           <a
             class="nav-link text-light"
             aria-current="page"
             routerLink="/recipes"
             routerLinkActive="active"
-            *ngIf="isAuthenicated"
             >Recipes</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isAuthenicated">
           <a
             class="nav-link text-light"
             aria-current="page"
             routerLink="/auth"
             routerLinkActive="active"
-            *ngIf="!isAuthenicated"
             >Authenticate</a
           >
         </li>
-        <li class="nav-item">
-          <a
-            class="nav-link text-light"
-            routerLink="/shopping-list"
-            *ngIf="isAuthenicated"
+        <li class="nav-item" *ngIf="isAuthenicated">
+          <a class="nav-link text-light" routerLink="/shopping-list"
             >Shopping List</a
           >
         </li>
@@ -62,9 +57,11 @@
           </ul>
         </li>
 
-        <li class="nav-item float-end">
-          <a class="nav-link text-light" *ngIf="isAuthenicated" (click)="onLogout()">Logout</a>
-        </li>
+        <div class="justify-content-end" *ngIf="isAuthenicated">
+          <li class="nav-item">
+            <a class="nav-link text-light" (click)="onLogout()">Logout</a>
+          </li>
+        </div>
       </ul>
     </div>
   </div>
