--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -5,6 +5,7 @@
       [src]="recipe?.imagePath"
       class="img-fluid"
       alt="recipe-img"
+      style="max-width: 200px"
     />
   </div>
 </div>
@@ -34,7 +35,9 @@
         <li>
           <a class="dropdown-item" (click)="onEditRoute()">Edit Recipe</a>
         </li>
-        <li><a class="dropdown-item">Delete Recipe</a></li>
+        <li>
+          <a class="dropdown-item" (click)="onDeleteRecipe()">Delete Recipe</a>
+        </li>
       </ul>
     </div>
   </div>
