--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -5,7 +5,7 @@
         {{ this.error }}
       </p>
     </div>
-    <div *ngIf="isLoading">
+    <div *ngIf="isLoading" class="col-md-4 offset-5">
       <app-loader-spinner></app-loader-spinner>
     </div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
