--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,108 @@
-<p>recipe-edit works!</p>
+<div class="row" style="margin-top: 70px">
+  <div class="col-md-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <label for="name">Name :</label>
+            <input
+              type="text"
+              formControlName="name"
+              id="name"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <label for="imagePath">Image URL :</label>
+            <input
+              type="text"
+              formControlName="imagePath"
+              #imagePath
+              id="imagePath"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <img [src]="imagePath.value" class="img-fluid" />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <label for="description">Description :</label>
+            <textarea
+              id="description"
+              formControlName="description"
+              class="form-control"
+            >
+            </textarea>
+          </div>
+        </div>
+      </div>
+      <br />
+      <br />
+      <div class="row">
+        <div class="col-md-12" formArrayName="ingredients">
+          <div
+            class="row"
+            *ngFor="let ingredient of ingredientsControls; let i = index"
+            [formGroupName]="i"
+          >
+            <div class="col-md-8">
+              <input type="text" class="form-control" formControlName="name" />
+            </div>
+            <div class="col-md-2">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="amount"
+              />
+            </div>
+            <div class="col-md-2">
+              <button class="btn btn-danger" (click)="onDeleteIngredient(i)">
+                X
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col-md-12">
+          <button
+            type="button"
+            (click)="onAddIngredient()"
+            class="btn btn-primary float-end"
+          >
+            Add Ingredient
+          </button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <button
+            type="submit"
+            class="btn btn-success m-3"
+            [disabled]="recipeForm.invalid"
+          >
+            Submit
+          </button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
