--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,10 +1,11 @@
-<div class="row" style="margin-top: 70px">
+<div class="row" style="margin-top: 30px;">
+  <h3 class="text-primary">Add/Edit Recipe</h3>
   <div class="col-md-12">
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-md-12">
           <div class="form-group">
-            <label for="name">Name :</label>
+            <label for="name">Name: </label>
             <input
               type="text"
               formControlName="name"
@@ -15,10 +16,10 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mt-3">
         <div class="col-md-12">
           <div class="form-group">
-            <label for="imagePath">Image URL :</label>
+            <label for="imagePath">Image URL: </label>
             <input
               type="text"
               formControlName="imagePath"
@@ -30,7 +31,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mt-3">
         <div class="col-md-12">
           <img [src]="imagePath.value" class="img-fluid" />
         </div>
@@ -39,7 +40,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="form-group">
-            <label for="description">Description :</label>
+            <label for="description">Description: </label>
             <textarea
               id="description"
               formControlName="description"
@@ -49,9 +50,8 @@
           </div>
         </div>
       </div>
-      <br />
-      <br />
-      <div class="row">
+      <div class="row my-3">
+        <h6 class="text-primary">Add/Edit Ingredient</h6>
         <div class="col-md-12" formArrayName="ingredients">
           <div
             class="row"
@@ -59,9 +59,11 @@
             [formGroupName]="i"
           >
             <div class="col-md-8">
+              <label for="">Name</label>
               <input type="text" class="form-control" formControlName="name" />
             </div>
             <div class="col-md-2">
+              <label for="">Amount</label>
               <input
                 type="text"
                 class="form-control"
@@ -69,7 +71,7 @@
               />
             </div>
             <div class="col-md-2">
-              <button class="btn btn-danger" (click)="onDeleteIngredient(i)">
+              <button class="btn btn-danger my-4" (click)="onDeleteIngredient(i)">
                 X
               </button>
             </div>
