--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,14 @@
-<br>
+<br />
 <div class="row">
   <div class="col-md-12">
-    <button class="btn btn-primary" (click)="onNewRecipe()">New Recipe</button>
+    <button class="btn btn-primary" type="button" (click)="onNewRecipe()">
+      New Recipe
+    </button>
   </div>
 </div>
-<br>
+<br />
 <div class="row">
-  <div class="col-md-6" *ngFor="let recipe of recipes; let i = index" >
+  <div class="col-md-6" *ngFor="let recipe of recipes; let i = index">
     <app-recipe-item [recipe]="recipe" [index]="i"></app-recipe-item>
   </div>
 </div>
