Recipe module enhancements

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <div class="row" [routerLink]="[index]" routerLinkActive="recipeActive">
-  <div class="col-md-6 mb-4">
-    <div class="card" style="width:250px">
+  <div class="col-md-12">
+    <div class="card mb-4">
       <img
         *ngIf="recipe?.imagePath"
         [src]="recipe?.imagePath"
