--- a/src/app/recipes/recipe-start/recipe-start.component.html
+++ b/src/app/recipes/recipe-start/recipe-start.component.html
@@ -1,1 +1,5 @@
-<h3 class="mt-4"> Please Select Recipe! </h3>
+<div class="row">
+  <div class="col-md-12">
+    <h3 class="mt-4">Please Select Recipe!</h3>
+  </div>
+</div>
