--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,13 +1,8 @@
 <br />
 <div class="row">
-  <div class="col-md-12">
-    <button class="btn btn-primary" type="button" (click)="onNewRecipe()">
-      New Recipe
-    </button>
-  </div>
-</div>
-<br />
-<div class="row">
+  <button class="btn btn-primary float-end mb-3" type="button" (click)="onNewRecipe()">
+    New Recipe
+  </button>
   <div class="col-md-6" *ngFor="let recipe of recipes; let i = index">
     <app-recipe-item [recipe]="recipe" [index]="i"></app-recipe-item>
   </div>
