--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,26 +1,99 @@
 <div class="row">
   <div class="col-md-12 mb-3">
-    <form>
+    <form (ngSubmit)="onAddItem(shoppingForm)" #shoppingForm="ngForm">
       <div class="row">
         <div class="col-md-5 form-group">
           <label for="name">Name</label>
-          <input type="text" #nameInput class="form-control" id="name" />
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            name="name"
+            ngModel
+            required
+          />
         </div>
         <div class="col-md-2 form-group">
           <label for="amount">Amount</label>
-          <input type="text" #amountInput class="form-control" id="amount" />
+          <input
+            type="text"
+            class="form-control"
+            id="amount"
+            name="amount"
+            ngModel
+            required
+          />
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-md-12 mb-3">
+          <button
+            class="btn btn-success"
+            type="submit"
+            [disabled]="shoppingForm.invalid"
+          >
+            {{ editMode ? "Edit" : "Add" }}
+          </button>
+          &nbsp; @if(editMode) {
+          <button class="btn btn-danger" type="button" (click)="onDelete()">
+            Delete
+          </button>
+          &nbsp; }
+
+          <button class="btn btn-primary" type="button" (click)="onClear()">
+            Clear
+          </button>
         </div>
       </div>
     </form>
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-12 mb-3">
-    <button class="btn btn-success" type="button" (click)="onAddIngredientItem()">Add</button>
-    &nbsp;
-    <button class="btn btn-danger" type="button">Delete</button>
-    &nbsp;
-    <button class="btn btn-primary" type="button">Edit</button>
+<!-- <div class="row">
+  <div class="col-md-12">
+    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
+      <div class="row">
+        <div class="col-md-5 form-group">
+          <label for="name">Name</label>
+          <input
+            type="text"
+            name="name"
+            required
+            ngModel
+            class="form-control"
+            id="name"
+          />
+        </div>
+        <div class="col-md-2 form-group">
+          <label for="amount">Amount</label>
+          <input
+            type="text"
+            name="amount"
+            required
+            ngModel
+            class="form-control"
+            id="amount"
+          />
+        </div>
+      </div>
+      <br />
+      <div class="row">
+        <div class="col-md-12">
+          <button class="btn btn-success" [disabled]="f.invalid" type="submit">
+            {{ editMode ? "Update" : "Add" }}
+          </button>
+
+          &nbsp; @if (editMode) {
+          <button class="btn btn-danger" type="button" (click)="onDelete()">
+            Delete
+          </button>
+          &nbsp; }
+
+          <button class="btn btn-primary" type="button" (click)="onClear()">
+            Clear
+          </button>
+        </div>
+      </div>
+    </form>
   </div>
-</div>
+</div> -->
