--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand text-light" routerLink="/recipes">Recipe Website</a>
+    <a class="navbar-brand text-light" routerLink="/">Recipe Website</a>
     <button
       class="navbar-toggler"
       type="button"
