Enhancements in style & fix logout issue

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,7 +9,9 @@
       New Recipe
     </button>
   </div>
-  <div class="col-md-6" *ngFor="let recipe of recipes; let i = index">
-    <app-recipe-item [recipe]="recipe" [index]="i"></app-recipe-item>
+  <div class="row">
+    <div class="col-md-6" *ngFor="let recipe of recipes; let i = index">
+      <app-recipe-item [recipe]="recipe" [index]="i"></app-recipe-item>
+    </div>
   </div>
 </div>
